tools/flowc/tests/errors/error47.flow
Maybe<?> ::= None, Some<?>;
	None();
	Some(v : ?);

fn1(a : Maybe<?>, cb : (?) -> void) {
	
}

set(a : Some<ref Maybe<?>>, b : Maybe<?>) {
	a.v := b;
}

main() {
	a = Some(ref None());

	set(a, Some(0));
	
	// Uncomment next line to fix lambda type below
	// a.v := Some(0);
	
	fn1(a, \__ -> {}); // Java infers lambda argument type as None, but we set Some(0) above
}